--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@milkdown/core": "^7.2.1",
+		"@milkdown/preset-commonmark": "^7.2.1",
+		"@milkdown/theme-nord": "^7.2.1",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
