--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@codemirror/autocomplete": "^6.7.1",
+		"@codemirror/commands": "^6.2.4",
+		"@codemirror/lang-markdown": "^6.1.1",
+		"@codemirror/language": "^6.6.0",
+		"@codemirror/search": "^6.4.0",
+		"@codemirror/state": "^6.2.0",
+		"@codemirror/view": "^6.12.0",
 		"@milkdown/core": "^7.2.1",
 		"@milkdown/preset-commonmark": "^7.2.1",
 		"@milkdown/theme-nord": "^7.2.1",
